# csvplotter

./: .gitignore  README.md  example.ipynb  pyproject.toml  setup.py
Plotter/: __init__.py  dark.mplstyle  plotter.py  version.py
csvplotter/: __init__.py  light.mplstyle  plotter.py  version.py
csvplotter.egg-info/: PKG-INFO  SOURCES.txt
sample/: example.ipynb  plot_config.csv  plot_config_.csv
