[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvplotter"
dynamic = ["version"]
description = "A Python Plotter using .csv files"
authors = [
    { name = "Pedro Henrique Coimbra", email = "pedro-henrique.herig-coimbra@inrae.fr" }
]
keywords = ["plot", "csv"]
license = "EUPL-1.2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Other/Nonlisted Topic",
]
# requires-python = ">=3.8"
# dependencies = [
# ]

[project.urls]
Homepage = "https://github.com/pedrohenriquecoimbra/csvplotter"

[tool.setuptools]
packages.find = { where = ["."], include = ["csvplotter*"], exclude = ["sample*", "deprecated*"], namespaces = false }
# packages = ["csvplotter", "csvplotter.core"]
# exclude-package-data = { "csvplotter" = ["deprecated*"] }
# include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "csvplotter.version.__version__" }
description = { file = "README.md" }
# long_description = { file = "README.md", content-type = "text/markdown" }
